--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "buffer": "^6.0.3",
     "core-js": "^3.6.5",
     "eslint": "^6.8.0",
     "fs-extra": "^8.1.0",
     "igv-utils": "github:igvteam/igv-utils#v1.3.12",
     "igv-widgets": "github:igvteam/igv-widgets#v1.4.0",
+    "process": "^0.11.10",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.28.1",
     "rollup-plugin-copy": "^3.3.0",
