--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-strip": "^1.2.2",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "supercolliderjs": "^1.0.1"
   }
 }
